@@ -1,0 +1,27 @@
+﻿namespace AjIo.Language
+{
+    using System;
+    using System.Collections.Generic;
+    using System.Linq;
+    using System.Text;
+
+    public class ClonedObject : BaseObject
+    {
+        private IObject parent;
+
+        public ClonedObject(IObject parent)
+        {
+            this.parent = parent;
+        }
+
+        public IObject Parent { get { return this.parent; } }
+
+        public override object GetSlot(string name)
+        {
+            if (this.slotValues.ContainsKey(name))
+                return this.slotValues[name];
+
+            return this.parent.GetSlot(name);
+        }
+    }
+}
